# innovation-factory

./: .env.example  .gitignore  .mcp.json  README.md  app.yml  claude.md  databricks.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/skills/apx/: SKILL.md
docs/: development-guide.md  mol-asm-cockpit-lessons-learned.md
docs/projects/: adtech-intelligence.md  bsh-home-connect.md  hb-product-center.md  mol-asm-cockpit.md  vi-home-one.md
scripts/: create_agents.py  create_asm_cockpit_dashboard.py  create_dashboards.py  generate_quality_docs.py  seed_lakebase.py  seed_uc_hb_data.py  seed_uc_tables.py
scripts/ka_docs/customer_relations/: fleet_contract_transeuropa.txt  regional_market_analysis_croatia.txt  regional_market_analysis_hungary.txt
scripts/ka_docs/issue_resolution/: bakery_ordering_optimization.txt  fuel_delivery_procedures.txt  incident_report_network_outage_2025.txt  pump_maintenance_guide.txt  quality_audit_checklist.txt  seasonal_operations_guide.txt  tank_calibration_procedures.txt
src/innovation_factory/backend/: app.py  config.py  dependencies.py  models.py  router.py  runtime.py  seed.py
src/innovation_factory/backend/routers/: ideas.py  projects.py
src/innovation_factory/backend/services/: databricks_agents.py
src/innovation_factory/ui/: index.html
src/innovation_factory/ui/lib/: api.ts
src/innovation_factory/ui/routes/: index.tsx
tests/: conftest.py
tests/common/: __init__.py  test_api_health.py  test_databricks_agents.py  test_models.py  test_project_routes.py
tests/integration/: test_databricks.py
tests/projects/: __init__.py  test_adtech.py  test_bsh.py  test_mol_asm.py  test_vi_home.py
(+160 files in other folders)
